src/objects/demo2__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>demo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>field1__c</columns>
        <columns>field2__c</columns>
        <columns>field3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rule1</fullName>
        <active>true</active>
        <errorConditionFormula>$ObjectType.demo2__c.Fields.field1__c  = &apos;&apos;</errorConditionFormula>
        <errorMessage>Error occured</errorMessage>
    </validationRules>
</CustomObject>